package com.limatisoft.exceptions;

public class DataException extends RuntimeException{
	public DataException(String message) {
		super(message);
	}
}
